--- a/.env
+++ b/.env
@@ -26,3 +26,8 @@ APP_SECRET=038cf42d4f8fc7ad6f8e272d50effcc0
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> snc/redis-bundle ###
+# passwords that contain special characters (@, %, :, +) must be urlencoded
+REDIS_URL=redis://redis:6379
+###< snc/redis-bundle ###
