--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,22 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.0",
         "friendsofphp/proxy-manager-lts": "^1.0",
         "google/cloud-bigquery": "^1.23",
         "google/cloud-pubsub": "^1.39",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.7",
         "snc/redis-bundle": "^4.3",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.1.*",
+        "symfony/http-client": "6.1.*",
+        "symfony/property-access": "6.1.*",
+        "symfony/property-info": "6.1.*",
         "symfony/runtime": "6.1.*",
+        "symfony/serializer": "6.1.*",
         "symfony/yaml": "6.1.*",
         "whichbrowser/parser": "^2.1"
     },
