--- a/.env
+++ b/.env
@@ -31,3 +31,8 @@ APP_SECRET=038cf42d4f8fc7ad6f8e272d50effcc0
 # passwords that contain special characters (@, %, :, +) must be urlencoded
 REDIS_URL=redis://redis:6379
 ###< snc/redis-bundle ###
+
+# Replace KEY_PATH with the path of the JSON file that contains your service account key.
+GOOGLE_APPLICATION_CREDENTIALS='KEY_PATH'
+# Replace PROJECT_ID with the actual project ID
+GOOGLE_PROJECT_ID="PROJECT_ID"
