--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/annotations": "^1.0",
-        "friendsofphp/proxy-manager-lts": "^1.0",
         "google/cloud-bigquery": "^1.23",
         "google/cloud-pubsub": "^1.39",
         "phpdocumentor/reflection-docblock": "^5.3",
@@ -23,6 +22,7 @@
         "symfony/http-client": "6.1.*",
         "symfony/property-access": "6.1.*",
         "symfony/property-info": "6.1.*",
+        "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "6.1.*",
         "symfony/serializer": "6.1.*",
         "symfony/yaml": "6.1.*",
