--- a/config/services.yaml
+++ b/config/services.yaml
@@ -15,6 +15,7 @@ services:
             App\Model\Reader\ClientInfoReaderInterface: '@App\Model\Reader\ClientInfoReader'
             App\Client\GeoLocationClientInterface: '@App\Client\HttpGeoLocationClient'
             App\Model\DataCollector\ClientDataCollectorInterface: '@App\Model\DataCollector\QueueDataCollector'
+            App\Model\StatisticCollector\StatisticsCollectorInterface: '@App\Model\StatisticCollector\ProcessingStatisticsCollector'
             App\Client\QueueClientInterface: '@App\Client\PubSubClient'
 
     # makes classes in src/ available to be used as services
@@ -47,3 +48,7 @@ services:
     App\Client\BigQueryClient:
         arguments:
             $dataSetId: 'dataset_id'
+
+    App\Model\StatisticCollector\ProcessingStatisticsCollector:
+        arguments:
+            $storageClient: '@App\Client\RedisClient'
