--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "timursultanov/fraud0",
+    "name": "timursultanov/cleint-data-collctor",
     "type": "project",
     "license": "MIT",
     "description": "Test exercise",
